# onpair_like

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO_fsst_like.md  reproduce.sh
abi/: Cargo.toml
abi/src/: lib.rs
analysis/: analyze.py  contains_dive.py  launch.sh  report.py  resume_chain.sh  run_all.sh  run_remaining.sh  scan_b.sh  wait_done.sh  wait_remaining.sh
candidates/cpp_identity/: Cargo.toml  build.rs
candidates/cpp_identity/cpp/: CMakeLists.txt  identity.cpp
candidates/cpp_identity/src/: lib.rs
candidates/fsst/: Cargo.toml  build.rs
candidates/fsst/cpp/: CMakeLists.txt  fsst_candidate.cpp
candidates/fsst/src/: lib.rs
candidates/fsst_like/: Cargo.toml  build.rs
candidates/fsst_like/cpp/: CMakeLists.txt  fsst_like_candidate.cpp  localize.sh
candidates/fsst_like/src/: lib.rs
candidates/fsst_spiral/: Cargo.toml  UPSTREAM_BUG.md
candidates/fsst_spiral/src/: lib.rs
candidates/gate_canary/: Cargo.toml
candidates/gate_canary/src/: lib.rs
candidates/lz4/: Cargo.toml
candidates/lz4/src/: lib.rs
candidates/onpair/: Cargo.toml  build.rs
candidates/onpair/cpp/: CMakeLists.txt  onpair_candidate.cpp
candidates/onpair/src/: lib.rs
candidates/onpair_spiral/: Cargo.toml
candidates/onpair_spiral/src/: lib.rs
candidates/uncompressed/: Cargo.toml
candidates/uncompressed/src/: lib.rs
candidates/zstd/: Cargo.toml
candidates/zstd/src/: lib.rs
contract/: SEMANTICS.md  lb_candidate.h
datasets/: prepare.py  requirements.txt  sources.yaml
datasets/fixtures/: gen_fixture.py  mini.csv
harness/: Cargo.toml  build.rs
harness/src/: bitmap.rs  chunks.rs  cpu.rs  dataset.rs  gen.rs  lib.rs  main.rs  oracle.rs  registry.rs  results.rs  runner.rs  spec.rs  suite.rs  timing.rs
harness/tests/: gen.rs  pipeline.rs
scanners/ac_cpp/: Cargo.toml  build.rs
scanners/ac_cpp/cpp/: CMakeLists.txt  ac_cpp.cpp
scanners/ac_cpp/cpp/include/onpair/search/: aho_corasick_trie.h  byte_aho_corasick.h
scanners/ac_cpp/src/: lib.rs
scanners/classics/: Cargo.toml
scanners/classics/src/: lib.rs
scanners/composed/: Cargo.toml
scanners/composed/src/: lib.rs
scanners/cpp_std_find/: Cargo.toml  build.rs
scanners/cpp_std_find/cpp/: CMakeLists.txt  std_find.cpp
scanners/cpp_std_find/src/: lib.rs
scanners/libc/: Cargo.toml
scanners/libc/src/: lib.rs
scanners/memmem/: Cargo.toml
scanners/memmem/src/: lib.rs
scanners/multi/: Cargo.toml
scanners/multi/src/: lib.rs
scanners/stringzilla/: Cargo.toml
scanners/stringzilla/src/: lib.rs
specs/: gate-canary.toml  smoke.toml
specs/compression/: codecs.toml  fsst_like_query.toml  fsst_spiral_query.toml  onpair_spiral_query.toml
specs/paper/: amazon-title.toml  clickbench-url-1m.toml  dbpedia-abstract.toml  msmarco-query.toml  msmarco-url.toml  tpch-ccomment-sf10.toml  tpch-pname-sf10.toml
specs/shootout/: candidates.toml  probe-msmarco.toml  tier1-rest.toml  tier1.toml
suites/amazon-title-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/clickbench-url-1m-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/compression/clickbench-url-1m/: gen-report.json  queries.jsonl  suite.json
suites/compression/dbpedia-abstract/: gen-report.json  queries.jsonl  suite.json
suites/compression/msmarco-query/: gen-report.json  queries.jsonl  suite.json
suites/compression/tpch-ccomment-sf10/: gen-report.json  queries.jsonl  suite.json
suites/dbpedia-abstract-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/msmarco-query-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/msmarco-url-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/smoke/: queries.jsonl  suite.json
suites/tpch-ccomment-sf10-gen1-s42/: gen-report.json  queries.jsonl  suite.json
suites/tpch-pname-sf10-gen1-s42/: gen-report.json  queries.jsonl  suite.json
